@@ -630,6 +630,23 @@ channels.
 =for comment
 From: File paste.im
 
+=item i_gsamp_bits(im, left, right, y, samples, channels, channel_count, bits)
+
+Reads integer samples scaled to C<bits> bits of precision into the
+C<unsigned int> array C<samples>.
+
+Expect this to be slow unless C<< bits == im->bits >>.
+
+Returns the number of samples copied, or -1 on error.
+
+Not all image types implement this method.
+
+Pushes errors, but does not call C<i_clear_error()>.
+
+
+=for comment
+From: File imext.c
+
 =item i_gsampf(im, left, right, y, samples, channels, channel_count)
 
 
@@ -751,6 +768,23 @@ Returns 0 if the pixel was drawn, or -1 if not.
 
 Does no alpha blending, just copies the channels from the supplied
 color to the image.
+
+
+=for comment
+From: File imext.c
+
+=item i_psamp_bits(im, left, right, y, samples, channels, channel_count, bits)
+
+Writes integer samples scaled to C<bits> bits of precision from the
+C<unsigned int> array C<samples>.
+
+Expect this to be slow unless C<< bits == im->bits >>.
+
+Returns the number of samples copied, or -1 on error.
+
+Not all image types implement this method.
+
+Pushes errors, but does not call C<i_clear_error()>.
 
 
 =for comment
